<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.dbeaver.common</groupId>
        <artifactId>com.dbeaver.common.main</artifactId>
        <version>2.2.0-SNAPSHOT</version>
        <relativePath>../dbeaver-common/pom.xml</relativePath>
    </parent>

    <groupId>org.jkiss.dbeaver</groupId>
    <artifactId>dbeaver</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <dbeaver-version>24.2.4</dbeaver-version>
        <dbeaver-product>DBeaver</dbeaver-product>

        <local-p2-repo.version>${dbeaver-version}</local-p2-repo.version>
        <local-p2-repo.url>https://p2.dev.dbeaver.com/eclipse-repo/${local-p2-repo.version}</local-p2-repo.url>

        <key.storage.path>/etc/</key.storage.path>
        <tsa/>
    </properties>

    <modules>
        <module>plugins</module>
        <module>features</module>
    </modules>

    <repositories>
        <repository>
            <id>local-contrib</id>
            <url>${local-p2-repo.url}</url>
            <layout>p2</layout>
        </repository>
    </repositories>

    <build>
        <sourceDirectory>${project.basedir}/src</sourceDirectory>
        <testSourceDirectory>${project.basedir}/tests</testSourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <resources>
                    </resources>
                </configuration>
            </plugin>

            <!-- Tycho build -->
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <pomDependencies>consider</pomDependencies>
                    <environments>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>
                </configuration>

            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho-version}</version>
                <extensions>true</extensions>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-compiler-plugin</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <useProjectSettings>false</useProjectSettings>
                    <source>17</source>
                    <target>17</target>
                    <compilerVersion>17</compilerVersion>
                </configuration>
            </plugin>

            <!-- Set Built-By info -->
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-packaging-plugin</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Built-By>dbeaver.io</Built-By>
                            <Created-By>dbeaver.io</Created-By>
                            <Build-Time>${maven.build.timestamp}</Build-Time>
                        </manifestEntries>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                </configuration>
            </plugin>

        </plugins>

    </build>

    <profiles>
        <!-- desktop build: includes UI components and products -->
        <profile>
            <id>desktop</id>
            <activation><property><name>!headless-platform</name></property></activation>
            <modules>
                <!-- Tests -->
                <module>test</module>

                <!-- Products -->
                <module>product/community</module>
                <module>product/repositories</module>
            </modules>
        </profile>

        <!-- desktop build: includes UI components and products -->
        <profile>
            <id>appstore</id>
            <activation><activeByDefault>false</activeByDefault></activation>
            <modules>
                <!-- Products -->
                <module>product/appstore</module>
            </modules>
        </profile>

        <!-- Enables build for all platforms including ARM -->
        <profile>
            <id>all-platforms</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.eclipse.tycho</groupId>
                        <artifactId>target-platform-configuration</artifactId>
                        <version>${tycho-version}</version>
                        <configuration>
                            <pomDependencies>consider</pomDependencies>
                            <environments>
                                <environment>
                                    <os>win32</os>
                                    <ws>win32</ws>
                                    <arch>x86_64</arch>
                                </environment>
                                <environment>
                                    <os>win32</os>
                                    <ws>win32</ws>
                                    <arch>aarch64</arch>
                                </environment>
                                <environment>
                                    <os>linux</os>
                                    <ws>gtk</ws>
                                    <arch>x86_64</arch>
                                </environment>
                                <environment>
                                    <os>linux</os>
                                    <ws>gtk</ws>
                                    <arch>aarch64</arch>
                                </environment>
                                <environment>
                                    <os>macosx</os>
                                    <ws>cocoa</ws>
                                    <arch>x86_64</arch>
                                </environment>
                                <environment>
                                    <os>macosx</os>
                                    <ws>cocoa</ws>
                                    <arch>aarch64</arch>
                                </environment>
                            </environments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <!-- Profile for jars sign -->
        <profile>
            <id>sign-code</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <!--
                            Jar sign can be slow, especially if you need to sign hundreds of them.
                            Performance hints:
                                - Force SHA512withRSA algorithm (https://stackoverflow.com/questions/44003975/ev-code-signing-extremely-slow)
                                - Install fast secure random generator (https://stackoverflow.com/questions/137212/how-to-deal-with-a-slow-securerandom-generator)
                         -->
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jarsigner-plugin</artifactId>
                        <version>3.0.0</version>
                        <configuration>
                            <keystore>${key.storage.path}/jar-sign.keystore</keystore>
                            <tsa>${tsa}</tsa>
                            <tsacert>dbeaver</tsacert>
                            <storepass>dbeaver</storepass>
                            <alias>dbeaver</alias>
                            <keypass>dbeaver</keypass>
                            <arguments>
                                <argument>-sigalg</argument>
                                <argument>SHA512withRSA</argument>
                            </arguments>
                        </configuration>
                        <executions>
                            <execution>
                                <id>sign</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
